RF005 - Finalização da sprint (subindo para produção branch main)
