# src/rf-001-gestao-identidade/backend/schemas/pessoas_schemas.py
@@ -44,6 +44,7 @@ class PessoaResponse(BaseModel):
     id: UUID
     nome: str
     cpf: Optional[str]
+    telefone: Optional[str] = None
     user_id: Optional[UUID]
     ativo: bool
 
